# genealogy

./: .env.example  .gitignore  DESIGN.md  NEO4J_DESIGN.md  README.md  Roadmap.md  common_classes.py  family_tree.json  gedcom_generator.py  name_variations.json  new_people.json  obituaries.json  obituary_catalog.py  obituary_reader copy.py  obituary_reader.py  obituary_scraper.py  obituary_urls.json  obituary_urls.json.bak  patterns.py  people copy.json  people.json  people2.json  people2.tmpl  people_finder.py  people_processed.json  relationships-log4j.txt  relationships_analysis.json  requirements.txt  scraped_obituaries.json  scraper.py  setup.py  sibling_finder.py  test_date_extraction.py  test_found_person_patterns.py  test_obituary_catalog.py  test_obituary_processor.py  test_obituary_reader.py  test_output.txt  test_patterns.py
genealogy_mapper/: .gitignore  README.md  obituary_urls.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
genealogy_mapper/docs/: design.md
genealogy_mapper/scripts/: test_hybrid.py
genealogy_mapper/src/debug/: legacy_page.html
genealogy_mapper/src/genealogy_mapper/: __main__.py  cli.py
genealogy_mapper/src/genealogy_mapper/core/: config.py  db_init.py  neo4j_ops.py  (+7 more)
genealogy_mapper/tests/: __init__.py  conftest.py  test_legacy_scraper.py  test_scraper_factory.py  test_url_importer.py
genealogy_mapper/tests/core/: conftest.py  test_config.py  test_database_init.py  test_db_init.py  test_db_schema.py  test_neo4j_connection.py  test_ner_processor.py  test_obituary_scraper.py  test_url_importer.py
(+39 files in other folders)
